[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/perseguidor_voador.gd" type="Script" id=1]
[ext_resource path="res://img/bart.png" type="Texture" id=2]
[ext_resource path="res://som/bart voador.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.3854, 41.564 )

[sub_resource type="Animation" id=2]
resource_name = "morto"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.12549, 0, 1, 0.137255 ), Color( 1, 1, 1, 1 ), Color( 0.12549, 0, 1, 0.137255 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "parado"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 360, 346, 49, 45 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 360, 346, 49, 45 ), Rect2( 303, 345, 49, 47 ), Rect2( 360, 346, 49, 45 ), Rect2( 303, 345, 49, 47 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="NodeVoador" type="Node2D"]

[node name="Perseguidor_voador" type="KinematicBody2D" parent="."]
z_index = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Perseguidor_voador"]
self_modulate = Color( 0.12549, 0, 1, 0.137255 )
position = Vector2( -0.675781, -0.680374 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 360, 346, 49, 45 )

[node name="area_dano" type="Area2D" parent="Perseguidor_voador"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perseguidor_voador/area_dano"]
position = Vector2( -5.24864, 0.983407 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="Perseguidor_voador"]
wait_time = 1.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Perseguidor_voador"]
anims/morto = SubResource( 2 )
anims/parado = SubResource( 3 )
anims/voando = SubResource( 4 )

[node name="risada_voador" type="AudioStreamPlayer2D" parent="Perseguidor_voador"]
stream = ExtResource( 3 )
volume_db = -9.649
[connection signal="body_entered" from="Perseguidor_voador/area_dano" to="Perseguidor_voador" method="_on_area_dano_body_entered"]
[connection signal="timeout" from="Perseguidor_voador/Timer" to="Perseguidor_voador" method="_on_Timer_timeout"]
